Amendments on AH Feedback 1. Splash and Front

--- a/wp-content/themes/askonasholt2016/assets/scss/components/_single_artist_hero.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_single_artist_hero.scss
@@ -2,7 +2,7 @@
 body.single.single-artists {
 	.artist-header.container {
 	    max-width: 100%;
-	    background-image: url("../images/bg-general-official.jpg");
+	    background-image: url("../images/bg-general.jpg");
 	    @include full-bg;
 	    height: 65vh;
 	    position: relative;
