--- a/wp-content/themes/askonasholt2016/assets/scss/templates/_front.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/templates/_front.scss
@@ -211,6 +211,7 @@
         font-weight: bold;
         line-height: 78px;
         color: initial;
+        font-family: "Brown-Pro-Light", AdobeBlank;
     }
 }
 
