--- a/wp-content/themes/askonasholt2016/assets/scss/components/_general-heroes.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_general-heroes.scss
@@ -51,7 +51,7 @@ i.fa.fa-angle-right.slick-arrow {
 button.hero-button {
 	padding: 10px;
 	margin-top: 5px;
-	font-weight: bold;
+	//font-weight: bold;
 
 	a {
 		color: white;
@@ -69,6 +69,6 @@ button.hero-button {
 
 @include breakpoint(medium) {
   .hero-text {
-  	max-width: 50%;
+  	max-width: 80%;
   }
 }
