--- a/wp-content/themes/askonasholt2016/assets/scss/templates/_splash-page.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/templates/_splash-page.scss
@@ -22,6 +22,11 @@ body.home {
         left: 2em;
         position: absolute;
     }
+    span.hero-blurb {
+      p {
+        line-height: 1.6;
+      }
+    }
   }
 
   header#masthead, div#footer-container {
@@ -34,7 +39,7 @@ body.home {
       width: 100%;
       text-align: center;
       padding: $sitepadding;
-      font-weight: bold;
+      //font-weight: bold;
       a {
         color: #FFFFFF;
       }
