--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_navigation.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_navigation.scss
@@ -231,3 +231,34 @@
 
 
 
+
+
+ul.dropdown.menu.vertical.submenu.is-dropdown-submenu.first-sub:before {
+  //position: absolute;
+  content: "";
+  display: block;
+  width: 16;
+  height: 16;
+  border: inset 12px;
+  border-color: transparent transparent #BA0C2F transparent;
+  border-bottom-style: solid;
+  position: absolute;
+  top: -22px;
+  z-index: 99;
+  @include center(x);
+}
+
+@include breakpoint(medium up) {
+  header#masthead .top-bar .dropdown.menu .submenu li a {
+    vertical-align: middle;
+    line-height: 10px;
+  }
+  header#masthead .top-bar .menu li.is-submenu-item {
+    border-bottom: 1px solid rgba(204, 204, 204, 0.4);
+    transition: 0.5s;
+  }
+  header#masthead .top-bar .menu li.is-submenu-item:hover {
+      background: #da183f;
+  }
+
+}
