Accordions styles and Artists

--- a/wp-content/themes/askonasholt2016/assets/scss/components/_artist-details.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_artist-details.scss
@@ -251,6 +251,11 @@ div#video-audio {
 			margin: 0 auto;
 		}
 	}
+	body.page-template-home {
+		div#video-audio {
+			margin-top: $sitepadding-large;
+		}
+	}
 }
 
 
