--- a/wp-content/themes/askonasholt2016/assets/scss/components/_text-banner.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_text-banner.scss
@@ -4,6 +4,10 @@
     left: 0;
     //position: absolute;
     margin: $sitepadding 0;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+
     .text-banner {
     	text-align: center;
     	color: white;
