--- a/wp-content/themes/askonasholt2016/assets/scss/components/_artist-details.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_artist-details.scss
@@ -97,6 +97,9 @@
 		box-shadow: 0px 11px 48px -5px rgba(0, 0, 0, 0.75);
 		margin: 25px;
 	}
+	div#schedule {
+		border-bottom: 1px solid #cccccc;
+	}
 	.artist-navigation li {
 		display: inline;
 	}
