--- a/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
+++ b/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
@@ -11391,6 +11391,9 @@ body.page .slick-dotted.slick-slider {
   box-shadow: 0px 11px 48px -5px rgba(0, 0, 0, 0.75);
   margin: 25px; }
 
+.single-artists div#schedule {
+  border-bottom: 1px solid #cccccc; }
+
 .single-artists .artist-navigation li {
   display: inline; }
 
