--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_navigation.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_navigation.scss
@@ -41,56 +41,56 @@
   //   display: none;
   // }
 
-  header#masthead .top-bar-right {
-    padding-left: 0 !important;
-    position: absolute;
-    z-index: 10;
-    // top: 10px;
-    // left: 10px;
-    top: 0;
-    left: 0;
-    .mega-toggle-block {
-      height: $mob-header-height;
-    }
+  // header#masthead .top-bar-right {
+  //   padding-left: 0 !important;
+  //   position: absolute;
+  //   z-index: 10;
+  //   // top: 10px;
+  //   // left: 10px;
+  //   top: 0;
+  //   left: 0;
+  //   .mega-toggle-block {
+  //     height: $mob-header-height;
+  //   }
 
-  }
+  // }
 
-  #mega-menu-wrap-top-bar-r .mega-menu-toggle {
-    background-color: transparent;
-    // ul {
-    //   background-color: $white;
-    // }
-  }
+  // #mega-menu-wrap-top-bar-r .mega-menu-toggle {
+  //   background-color: transparent;
+  //   // ul {
+  //   //   background-color: $white;
+  //   // }
+  // }
 
-  #mega-menu-wrap-top-bar-r #mega-menu-top-bar-r {
-    li {
-      background-color: $white !important;
-    }
-  }
+  // #mega-menu-wrap-top-bar-r #mega-menu-top-bar-r {
+  //   li {
+  //     background-color: $white !important;
+  //   }
+  // }
 
-  #mega-menu-wrap-top-bar-r .mega-menu-toggle .mega-toggle-block-1:before,
-  #mega-menu-wrap-top-bar-r .mega-menu-toggle .mega-toggle-block-1:after {
-    color: $black;
-  }
+  // #mega-menu-wrap-top-bar-r .mega-menu-toggle .mega-toggle-block-1:before,
+  // #mega-menu-wrap-top-bar-r .mega-menu-toggle .mega-toggle-block-1:after {
+  //   color: $black;
+  // }
 
-  .header-search-toggle {
-    position: absolute;
-    top: 0;
-    left: 0;
-  }
+  // .header-search-toggle {
+  //   position: absolute;
+  //   top: 0;
+  //   left: 0;
+  // }
 
-  #mega-menu-wrap-top-bar-r .mega-menu-toggle {
-    width: 100px;
-    position: absolute;
-    right: 0;
-    top: 1em;
-  }
+  // #mega-menu-wrap-top-bar-r .mega-menu-toggle {
+  //   width: 100px;
+  //   position: absolute;
+  //   right: 0;
+  //   top: 1em;
+  // }
 
-  #mega-menu-wrap-top-bar-r .mega-menu-toggle.mega-menu-open + #mega-menu-top-bar-r {
-    top: $mob-header-height;
-    position: absolute;
-    width: 100%;
-  }
+  // #mega-menu-wrap-top-bar-r .mega-menu-toggle.mega-menu-open + #mega-menu-top-bar-r {
+  //   top: $mob-header-height;
+  //   position: absolute;
+  //   width: 100%;
+  // }
 
 }
 
@@ -123,12 +123,16 @@
     color: gray;
   }
 
+  .menu a:active, .current-menu-item a {
+    color: $brand-red !important;
+  }
+
   .menu>li:not(.menu-text)>a {
     padding: 1rem;
   }
 
   .menu li:not(:last-child) {
-    border-right: 1px solid #4e4e4e;
+    //border-right: 1px solid #4e4e4e;
   }
 
   .dropdown.menu .submenu {
