--- a/wp-content/themes/askonasholt2016/assets/scss/components/_general-heroes.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_general-heroes.scss
@@ -48,26 +48,28 @@ i.fa.fa-angle-right.slick-arrow {
 }
 
 //Arrows on Single Artist slider
-i.fa.fa-angle-left.slick-arrow {
-	left: 0;
-	position: absolute;
-	top: 42%;
-	z-index: 9;
-	color: white;
-	background: rgba(186,12,47,0.8);
-	padding: 10px;
-	cursor: pointer;
-}
+body.single-artists {
+	i.fa.fa-angle-left.slick-arrow {
+		left: 0;
+		position: absolute;
+		top: 42%;
+		z-index: 9;
+		color: white;
+		background: rgba(186,12,47,0.8);
+		padding: 10px;
+		cursor: pointer;
+	}
 
-i.fa.fa-angle-right.slick-arrow {
-	right: 0;
-	position: absolute;
-	top: 42%;
-	z-index: 9;
-	color: white;
-	background: rgba(186,12,47,0.8);
-	padding: 10px;
-	cursor: pointer;
+	i.fa.fa-angle-right.slick-arrow {
+		right: 0;
+		position: absolute;
+		top: 42%;
+		z-index: 9;
+		color: white;
+		background: rgba(186,12,47,0.8);
+		padding: 10px;
+		cursor: pointer;
+	}
 }
 
 
