--- a/wp-content/themes/askonasholt2016/assets/scss/components/_buttons.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_buttons.scss
@@ -6,3 +6,22 @@
   border-radius: 3px;
   border: none;
 }
+
+.normal-button a {
+	background-color: #fefefe;
+	color: #B49A81;
+	border: 1px solid #B49A81;
+	color: #B49A81;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+	font-weight: bold;
+	padding: 0.85em 1em;
+	margin: 0 0 1rem 0;
+	font-size: 0.9rem;
+	transition: 0.5s;
+}
+
+.normal-button a:hover {
+    background-color: #BA0C2F;
+    color: #ffffff;
+}
