--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_press-accordion.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_press-accordion.scss
@@ -2,7 +2,7 @@
 	font-size: 19px;
 	border-top: 1px solid #cccccc;
 	span.text_area_one {
-		padding: 0 $sitepadding 0 0.9375rem;
+		padding: 0 $sitepadding 0 0;
 	}
 	span.text_area_two, span.text_area_three {
 		padding: 0 $sitepadding;
