Single Artist Styles- Added Repertoire

--- a/wp-content/themes/askonasholt2016/assets/scss/components/_artist-details.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_artist-details.scss
@@ -119,10 +119,10 @@
 		font-weight: bold;
 	}
 
-	.magazine-item {
-		background-color: $bggrey;
-		color: #ffffff;
-	}
+	// .magazine-item {
+	// 	background-color: $bggrey;
+	// 	color: #ffffff;
+	// }
 
 }
 
@@ -244,6 +244,17 @@ div#video-audio {
 		}
 	}
 }
+
+//free-text area in Artist's page
+div.row.free-text {
+    margin: $sitepadding-large auto;
+    border-top: 1px solid #cccccc;
+    border-bottom: 1px solid #cccccc;
+    p {
+    	margin: 25px 0;
+    }
+}
+
 
 @include breakpoint(medium) {
 	.single-artists {
