Ch ch ch changes

--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_navigation.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_navigation.scss
@@ -127,6 +127,11 @@
     color: $brand-red !important;
   }
 
+  .menu-item.current-menu-item.is-submenu-item.is-dropdown-submenu-item {
+    color: white;
+
+  }
+
   .menu>li:not(.menu-text)>a {
     padding: 1rem;
   }
