--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_photoswipe.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_photoswipe.scss
@@ -452,7 +452,8 @@
       color: #BBB; }
 
   .pswp__caption__center {
-    text-align: left;
+    //text-align: left;
+    text-align: center;
     max-width: 420px;
     margin: 0 auto;
     font-size: 13px;
