Single Tour Hero Styles

--- a/wp-content/themes/askonasholt2016/assets/scss/templates/_tours-projects.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/templates/_tours-projects.scss
@@ -18,8 +18,12 @@
       margin-left: 1em;
       color: white;
       span.hero-text-dates {
-          padding: 2px 11px 11px;
+          padding: 11px 11px;
       }
+  }
+
+  .hero-text-dates {
+    background: rgba(186, 12, 47, 0.8);
   }
 
   .project-intro {
