Clients Page and single page

--- a/wp-content/themes/askonasholt2016/assets/scss/components/_artist-details.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_artist-details.scss
@@ -203,7 +203,7 @@ div#video-audio {
 
 
 //Load more button styles
-.post-type-archive-artists {
+.post-type-archive-artists, .post-type-archive-clients {
 	article {
 		position: relative;
 		.archive__load-more {
